[angel] remove auth from post/show
