# routes/userRouter.js
@@ -4,7 +4,7 @@ const auth = require('../middleware/auth');
 
 router.post('/create', userController.createUser);
 router.post('/create/post', auth, userController.insertPost);
-router.get('/show', userController.showAllUser);
+router.get('/', userController.showAllUser);
 router.get('/postList', auth, userController.userPostList);
 router.delete('/delete', auth, userController.deleteUser);
 
